--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                     <img src="~/Content/Images/pro_1.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -58,7 +58,7 @@
                     <img src="~/Content/Images/pro_2.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -77,7 +77,7 @@
                     <img src="~/Content/Images/pro_3.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -96,7 +96,7 @@
                     <img src="~/Content/Images/pro_4.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -115,7 +115,7 @@
                     <img src="~/Content/Images/pro_5.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -134,7 +134,7 @@
                     <img src="~/Content/Images/pro_6.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -153,7 +153,7 @@
                     <img src="~/Content/Images/pro_7.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -172,7 +172,7 @@
                     <img src="~/Content/Images/pro_8.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -191,7 +191,7 @@
                     <img src="~/Content/Images/pro_9.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -210,7 +210,7 @@
                     <img src="~/Content/Images/pro_10.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -229,7 +229,7 @@
                     <img src="~/Content/Images/pro_11.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -248,7 +248,7 @@
                     <img src="~/Content/Images/pro_12.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -267,7 +267,7 @@
                     <img src="~/Content/Images/pro_13.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -286,7 +286,7 @@
                     <img src="~/Content/Images/pro_14.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -305,7 +305,7 @@
                     <img src="~/Content/Images/pro_15.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -324,7 +324,7 @@
                     <img src="~/Content/Images/pro_16.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -343,7 +343,7 @@
                     <img src="~/Content/Images/pro_17.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -362,7 +362,7 @@
                     <img src="~/Content/Images/pro_18.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -381,7 +381,7 @@
                     <img src="~/Content/Images/pro_19.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
@@ -400,7 +400,7 @@
                     <img src="~/Content/Images/pro_20.jpg" />
                 </div>
                 <div class="image-hover">
-                    <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
+                    <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
                     <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
                 </div>
 
