--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -67,8 +67,8 @@
                 <a href="@Url.Action("Contact_View", "Home")">Contact</a>
             </li>
         </ul>
-        <div class="ml-auto">
-            @Html.Action("cartpartial", "cart")
+        <div class="ml-auto">          
+            <a href="@Url.Action("cartpartial","cart")"></a>
         </div>
     </nav>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
