--- a/Views/cart/showcart.cshtml
+++ b/Views/cart/showcart.cshtml
@@ -14,6 +14,9 @@
             <th>Số lượng</th>
             <th>Đơn giá</th>
             <th>Thành tiền</th>
+            <th>Chi tiết</th>
+            <th>Cập nhật</th>
+            <th>Xóa</th>
         </tr>
     </thead>
     <tbody>
@@ -23,14 +26,42 @@
                 <td>@clothes.id_product</td>
                 <td>@clothes.name</td>
                 <td><img src="~/Images/@clothes.images" /></td>
-                <td>@clothes.quantity</td>
-                <td>@clothes.price</td>
-                <td>@clothes.total()</td>
+                @using (Html.BeginForm("Edit", "cart", new { MaSP = clothes.id_product }))
+                {
+                    <td>
+                        <input type="number" min="1" value="@clothes.quantity" name="SoLuong" />
+                    </td>
+
+                    <td>@clothes.price</td>
+                    <td>@clothes.total()</td>
+                    <td>
+                        @Html.ActionLink("Chi tiết", "Details", "BookStore", new { id = clothes.id_product }, new { @class = "btn btn-success" })
+                    </td>
+                    <td>
+                        <button type="submit" class="btn btn-primary">Cập nhật</button>
+                    </td>
+                }
+                <td>
+                    @Html.ActionLink("Chi tiết", "Details", "products", new { id = clothes.id_product }, new { @class = "btn btn-success" })
+                </td>
+                <td>
+                    @Html.ActionLink("Cập nhật", "Edit", "products", new { id_products = clothes.id_product }, new { @class = "btn btn-primary" })
+                </td>
+                <td>
+                    @Html.ActionLink("Xóa hàng", "Delete", "products", new { id_products = clothes.id_product }, new { @class = "btn btn-danger" })
+                </td>
             </tr>
         }
         <tr style="font-weight:bold; text-align:right; color:red;">
             <td colspan="5">Tổng số lượng: @ViewBag.TongSL</td>
             <td colspan="1">Tổng tiền: @ViewBag.TongTien</td>
+        </tr>
+        <tr style="font-weight:bold; text-align:center;">
+            <td colspan="9">
+
+                @Html.ActionLink("ĐẶT HÀNG", "DatHang", null, new {@class = "btn btn-primary"})
+
+            </td>
         </tr>
     </tbody>
 </table>
