--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -57,8 +57,8 @@
             </button>
         </div>
         <ul class="nav-link">
-            <li>
-                <a href="@Url.Action("Login_View","Home")">Login</a>
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("DangNhap","NguoiDung")">Login</a>
             </li>
             <li>
                 <a href="@Url.Action("Register_View","Home")">Register</a>
@@ -67,8 +67,8 @@
                 <a href="@Url.Action("Contact_View", "Home")">Contact</a>
             </li>
         </ul>
-        <div class="ml-auto">          
-            <a href="@Url.Action("cartpartial","cart")"></a>
+        <div class="ml-auto">
+            @*@Html.Action("cartpartial", "cart")*@
         </div>
     </nav>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
