--- a/Areas/admin/Views/warehouses/Details.cshtml
+++ b/Areas/admin/Views/warehouses/Details.cshtml
@@ -12,19 +12,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.id_products)
+            @Html.DisplayNameFor(model => model.name_warehouse)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.id_products)
+            @Html.DisplayFor(model => model.name_warehouse)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.quantity)
+            @Html.DisplayNameFor(model => model.located)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.quantity)
+            @Html.DisplayFor(model => model.located)
         </dd>
 
     </dl>
