--- a/Areas/admin/Views/warehouses/Edit.cshtml
+++ b/Areas/admin/Views/warehouses/Edit.cshtml
@@ -7,7 +7,6 @@
 
 <h2>Edit</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -19,18 +18,18 @@
         @Html.HiddenFor(model => model.id_warehouse)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.id_products, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.name_warehouse, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.id_products, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.id_products, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.name_warehouse, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.name_warehouse, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.located, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.located, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.located, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -45,7 +44,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
