--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<do_an_web.Models.category>
+﻿@model IEnumerable<do_an_web.Models.product>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -14,9 +14,7 @@
             <li class="list">
                 <p style="font-family: monospace; font-weight:700; font-size:25px;">Clothings</p>
                 <ul class="dropdown">
-                    @foreach (var item in Model) { 
-                        <li><a href="@Url.Action("Home", "Index", new {@class="product-details"})">@item.name_category</a></li>
-                    }
+                    @Html.Action("takecategory", "Home")
                 </ul>
             </li>
             <li>
@@ -28,8 +26,26 @@
         </ul>
     </div>
 </nav>
-<nav class="tab3">  
+<nav class="tab3">
     <h2></h2>
 </nav>
+<div class="row">
+    @foreach (var clothes in Model)
+    {
+
+        <div class="card col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch book-section">
+
+            <a href="@Url.Action("Details", "products", new { id = clothes.id_products })">
+                <img class="card-img-top book-picture h-100 w-50"
+                     src="~/Content/Images/@clothes.images" alt="Card image">
+            </a>
+            <div class="card-body">
+                <h4 class="card-title">@clothes.name</h4>
+                <p class="card-text">@clothes.price</p>
+            </div>
+        </div>
+
+    }
+</div>
 
 
