--- a/Views/product/Delete.cshtml
+++ b/Views/product/Delete.cshtml
@@ -37,6 +37,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.descibe)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.descibe)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.images)
         </dt>
 
@@ -61,11 +69,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.warehouse.id_warehouse)
+            @Html.DisplayNameFor(model => model.warehouse.name_warehouse)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.warehouse.id_warehouse)
+            @Html.DisplayFor(model => model.warehouse.name_warehouse)
         </dd>
 
     </dl>
