--- a/Areas/admin/Views/products/Create.cshtml
+++ b/Areas/admin/Views/products/Create.cshtml
@@ -71,17 +71,28 @@
         @Html.LabelFor(model => model.images, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(model => model.images, null, new { type = "file", @class = "form-control" })
-            @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control" } })
+            @*@Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control" } })*@
             @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-            @Html.LabelFor(model => model.descibe, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.descibe, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.descibe, "", new { @class = "text-danger" })
-            </div>
+        @Html.LabelFor(model => model.images_size, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.images_size, null, new { type = "file", @class = "form-control" })
+            @*@Html.EditorFor(model => model.images_size, new { htmlAttributes = new { @class = "form-control" } })*@
+            @Html.ValidationMessageFor(model => model.images_size, "", new { @class = "text-danger" })
         </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.descibe, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(model => model.descibe, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.descibe, "", new { @class = "text-danger" })
+            <script>
+                CKEDITOR.replace("descibe")
+            </script>
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
