--- a/Areas/admin/Views/products/Edit.cshtml
+++ b/Areas/admin/Views/products/Edit.cshtml
@@ -75,12 +75,22 @@
         </div>
     </div>
     <div class="form-group">
-            @Html.LabelFor(model => model.descibe, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.descibe, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.descibe, "", new { @class = "text-danger" })
-            </div>
+        @Html.LabelFor(model => model.images_size, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.images_size, null, new { type = "file", @class = "form-control" })
+            <img src="~/Content/Images-Title/@Model.images_size" />
+            @Html.Hidden("oldimage", @Model.images_size)
+            @Html.ValidationMessageFor(model => model.images_size, "", new { @class = "text-danger" })
         </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.descibe, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(model => model.descibe)
+            @*@Html.EditorFor(model => model.descibe, new { htmlAttributes = new { @class = "form-control" } })*@
+            @Html.ValidationMessageFor(model => model.descibe, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
