--- a/Areas/admin/Views/products/Index.cshtml
+++ b/Areas/admin/Views/products/Index.cshtml
@@ -38,6 +38,9 @@
                 Hình Sản Phẩm
             </th>
             <th>
+                Hình Size
+            </th>
+            <th>
                 Hãng
             </th>
             <th>
@@ -66,6 +69,9 @@
                 </td>
                 <td>
                     <img src="~/Content/Images/@item.images" height="150" width="150" />
+                </td>
+                <td>
+                    <img src="~/Content/Images-Title/@item.images_size" height="150" width="150" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.brand.name_brand)
