--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -10,6 +10,7 @@
 <div class="row">
     <div class="offset-md-1 col-md-4">
         <img style="width: 100%;" src="~/Content/Images/@Model.images" alt="">
+        <img style="width: 100%;" src="~/Content/Images-Title/@Model.images_size" alt="">
     </div>
     <div class="col-md-6 details">
         <h3>Tên sách: @Model.name</h3>
