--- a/Views/product/Delete.cshtml
+++ b/Views/product/Delete.cshtml
@@ -41,7 +41,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.descibe)
+            @Html.Raw(Model.descibe)
         </dd>
 
         <dt>
@@ -50,6 +50,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.images)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.images_size)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.images_size)
         </dd>
 
         <dt>
