--- a/Views/product/Details.cshtml
+++ b/Views/product/Details.cshtml
@@ -15,17 +15,14 @@
 <br />
 <div class="row">
     <div class="offset-md-1 col-md-4">
-        <img style="width:50px;" src="~/Images/@Model.images" alt="">
+        <img style="width:350px; height:350px;" src="~/Content/Images/@Model.images" alt="">
+        <img src="~/Content/Images-Title/@Model.images_size" />  
     </div>
     <div class="col-md-6 details">
         <h3>Tên sách: @Model.name</h3><br />
         <div style="text-align: justify">
-            <span style="font-weight: bold">
-                
-                <p>Mô tả: @Model.descibe</p>
-                <img src="~/Content/Images-Title/pro_1_size.jpg" />
-            </span>
-        </div>
+            Mô tả: @Model.descibe
+        </div>        
         <p class="price">
             Giá bán: <span style="color:red; font-size:32px;">
                 @String.Format("{0:0.00}", Model.price) VNĐ
