--- a/Areas/admin/Views/products/Delete.cshtml
+++ b/Areas/admin/Views/products/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Delete</h2>
 
-<h3>Bạn Có Muốn Xóa Sản Phẩm Này???</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>product</h4>
     <hr />
@@ -41,7 +41,7 @@
         </dt>
 
         <dd>
-            @Html.Raw(Model.descibe)
+            @Html.DisplayFor(model => model.descibe)
         </dd>
 
         <dt>
@@ -49,14 +49,15 @@
         </dt>
 
         <dd>
-            <img src="~/Content/Images/@Model.images" />
+            <img src="~/Content/Images/@Model.images" alt="hình sản phẩm"/>
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.images_size)
         </dt>
 
         <dd>
-            <img src="~/Content/Images-Title/@Model.images_size" />
+            <img src="~/Content/Images-Title/@Model.images_size" alt="hình size" />
         </dd>
 
         <dt>
