--- a/Areas/admin/Views/products/Details.cshtml
+++ b/Areas/admin/Views/products/Details.cshtml
@@ -1,5 +1,4 @@
 ﻿@model do_an_web.Models.product
-@using do_an_web.Models
 
 @{
     ViewBag.Title = "Details";
@@ -41,7 +40,7 @@
         </dt>
 
         <dd>
-            @Html.Raw(Model.descibe)
+            @Html.DisplayFor(model => model.descibe)
         </dd>
 
         <dt>
@@ -49,14 +48,15 @@
         </dt>
 
         <dd>
-            <img src="~/Content/Images/@Model.images" />
+            <img src="~/Content/Images/@Model.images" alt="hình sản phẩm" />
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.images_size)
         </dt>
 
         <dd>
-            <img src="~/Content/Images-Title/@Model.images_size" />
+            <img src="~/Content/Images-Title/@Model.images_size" alt="hình size" />
         </dd>
 
         <dt>
