--- a/Views/cart/HoanThanhDonHang.cshtml
+++ b/Views/cart/HoanThanhDonHang.cshtml
@@ -6,8 +6,7 @@
 
 <div style="text-align:center">
     <h2>
-        ĐƠN HÀNG CỦA QUÝ KHÁCH ĐÃ ĐƯỢC GHI NHẬN. CHÚNG TÔI SẼ LIÊN HỆ TRONG THỜI GIAN SỚM
-        NHẤT
+        ĐƠN HÀNG CỦA QUÝ KHÁCH ĐÃ ĐƯỢC GHI NHẬN. CHÚNG TÔI SẼ LIÊN HỆ TRONG THỜI GIAN SỚM NHẤT
     </h2>
     <p>
         @Html.ActionLink("Về trang chủ", "Index", "products", null, new {@class = "btn btn - primary" })
