--- a/Views/cart/showcart.cshtml
+++ b/Views/cart/showcart.cshtml
@@ -27,32 +27,32 @@
                 <td>@clothes.id_product</td>
                 <td>@clothes.name</td>
                 <td><img src="~/Images/@clothes.images" /></td>
-                @*@using (Html.BeginForm("Edit", "cart", new { MaSP = clothes.id_product }))
-        {
-            <td>
-                <input type="number" min="1" value="@clothes.quantity" name="SoLuong" />
-            </td>
+                @using (Html.BeginForm("CapNhatMatHang", "cart", new { id_products = clothes.id_product }))
+                {
+                    <td>
+                        <input type="number" min="1" value="@clothes.quantity" name="SoLuong" />
+                    </td>
 
-            <td>@clothes.price</td>
-            <td>@clothes.total()</td>
-            <td>
-                @Html.ActionLink("Chi tiết", "Details", "products", new { id = clothes.id_product }, new { @class = "btn btn-success" })
-            </td>
-            <td>
-                <button type="submit" class="btn btn-primary">Cập nhật</button>
-            </td>
-        }*@
+                    <td>@clothes.price</td>
+                    <td>@clothes.total()</td>
+                    <td>
+                        @Html.ActionLink("Chi tiết", "Details", "Home", new { id_products = clothes.id_product }, new { @class = "btn btn-success" })
+                    </td>
+                    <td>
+                        <button type="submit" class="btn btn-primary">Cập nhật</button>
+                    </td>
+                }
                 <td>@clothes.quantity</td>
                 <td>@clothes.price</td>
                 <td>@clothes.total()</td>
                 <td>
-                    @Html.ActionLink("Chi tiết", "Details", "product", new { id = clothes.id_product }, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Chi tiết", "Details", new { id = clothes.id_product }, new { @class = "btn btn-success" })
                 </td>
                 <td>
-                    @Html.ActionLink("Cập nhật", "CapNhatMatHang", "product", new { id_products = clothes.id_product }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Cập nhật", "CapNhatMatHang", new { id_products = clothes.id_product }, new { @class = "btn btn-primary" })
                 </td>
                 <td>
-                    @Html.ActionLink("Xóa", "deleteproduct", "product", new { id_products = clothes.id_product }, new { @class = "btn btn-danger" })
+                    @Html.ActionLink("Xóa", "deleteproduct", new { id_products = clothes.id_product }, new { @class = "btn btn-danger" })
                 </td>
             </tr>
         }
