--- a/Views/product/Delete.cshtml
+++ b/Views/product/Delete.cshtml
@@ -53,11 +53,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.images_size)
+            @Html.DisplayNameFor(model => model.images)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.images_size)
+            @Html.DisplayFor(model => model.images)
         </dd>
 
         <dt>
