--- a/Areas/admin/Views/products/Create.cshtml
+++ b/Areas/admin/Views/products/Create.cshtml
@@ -5,17 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Thêm Sản Phẩm @ViewBag.Message</h2>
+<h2>Create</h2>
 
-@using (Html.BeginForm("Create", "products", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
+        <h4>product</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.id_warehouse, "Mã Nhà Kho", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.id_warehouse, "id_warehouse", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("id_warehouse", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.id_warehouse, "", new { @class = "text-danger" })
@@ -23,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.id_category, "Kho", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.id_category, "id_category", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("id_category", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.id_category, "", new { @class = "text-danger" })
@@ -31,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.id_brand, "Hãng", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.id_brand, "id_brand", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("id_brand", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.id_brand, "", new { @class = "text-danger" })
@@ -71,17 +72,17 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.images, "Hình Ảnh Sản Phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.images, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control", type = "file" } })
+                @Html.TextBoxFor(model => model.images,null,new { type="file", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.images_size, "Hình Size", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.images_size, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.images_size, new { htmlAttributes = new { @class = "form-control", type = "file" } })
+                @Html.EditorFor(model => model.images_size,null,new {type="file", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.images_size, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -89,9 +90,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-            <div class="col-md-offset-2 col-md-10">
-                <input type="reset" value="Again" class="btn btn-danger" />
+                <input type="reset"  value="Create Again" class="btn btn-danger" />
             </div>
         </div>
     </div>
@@ -100,6 +99,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
