--- a/Areas/admin/Views/products/Delete.cshtml
+++ b/Areas/admin/Views/products/Delete.cshtml
@@ -41,7 +41,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.descibe)
+            @Html.Raw(Model.descibe)
         </dd>
 
         <dt>
@@ -49,7 +49,7 @@
         </dt>
 
         <dd>
-            <img src="~/Content/Images/@Model.images" alt="hình sản phẩm"/>
+            @Html.DisplayFor(model => model.images)
         </dd>
 
         <dt>
@@ -57,7 +57,7 @@
         </dt>
 
         <dd>
-            <img src="~/Content/Images-Title/@Model.images_size" alt="hình size" />
+            @Html.DisplayFor(model => model.images_size)
         </dd>
 
         <dt>
