--- a/Areas/admin/Views/products/Details.cshtml
+++ b/Areas/admin/Views/products/Details.cshtml
@@ -40,7 +40,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.descibe)
+            @Html.Raw(Model.descibe)
         </dd>
 
         <dt>
@@ -48,7 +48,7 @@
         </dt>
 
         <dd>
-            <img src="~/Content/Images/@Model.images" alt="hình sản phẩm" />
+            @Html.DisplayFor(model => model.images)
         </dd>
 
         <dt>
@@ -56,7 +56,7 @@
         </dt>
 
         <dd>
-            <img src="~/Content/Images-Title/@Model.images_size" alt="hình size" />
+            @Html.DisplayFor(model => model.images_size)
         </dd>
 
         <dt>
