--- a/Areas/admin/Views/products/Edit.cshtml
+++ b/Areas/admin/Views/products/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>product</h4>
         <hr />
@@ -76,9 +76,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.images, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.images, null, new { type = "file", htmlAttributes = new { @class = "form-control" } })
-                <img src="~/Content/Images/@Model.images" alt="hình sản phẩm" />
-                @Html.Hidden("Images", Model.images)
+                @Html.TextBoxFor(model => model.images, null, new {type="file", @class = "form-control" })
+                <img src="~/Content/Images/@Model.images" />
+                @Html.Hidden("oldimage", Model.images)
                 @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -86,13 +86,13 @@
         <div class="form-group">
             @Html.LabelFor(model => model.images_size, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.images_size, null, new { type = "file", htmlAttributes = new { @class = "form-control" } });
-                <img src="~/Content/Images-Title/@Model.images_size" alt="hình size" />s
-                @Html.Hidden("Images_Title", Model.images_size)
+                @Html.TextBoxFor(model => model.images_size,null, new {type="file", @class = "form-control" } )
+                <img src="~/Content/Images/@Model.images_size" />
+                @Html.Hidden("oldimage",Model.images_size)
                 @Html.ValidationMessageFor(model => model.images_size, "", new { @class = "text-danger" })
             </div>
         </div>
-        ,
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -104,6 +104,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
