--- a/Areas/admin/Views/products/Index.cshtml
+++ b/Areas/admin/Views/products/Index.cshtml
@@ -5,91 +5,78 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Thêm Sản Phẩm</h2>
+<h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Thêm Sản Phẩm", "Create", null, new { @class = "btn btn-warning" })
+    @Html.ActionLink("Create New", "Create")
 </p>
-@using (Html.BeginForm("Index", "products", FormMethod.Get, new { @class = "form-inline" }))
-{
-    <div class="form-group">
-        <label>Tên Sản Phẩm: </label>
-        <input type="Text" class="form-control mx-sm-3" value="@ViewBag.Keyword" name="searchString" placeholder="Nhập Tên Sản Phẩm Cần Tìm">
-        <input type="button" class="btn btn-danger" value="Tìm Sản Phẩm">
-    </div>
-    <hr /><hr />
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.discount)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.descibe)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.images)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.images_size)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.brand.name_brand)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.category.name_category)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.warehouse.name_warehouse)
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.price)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.discount)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.descibe)
+        </td>
+        <td>
+            <img src="~/Content/Images/@item.images"height="150" width="150" />
+        </td>
+        <td>
+            <img src="~/Content/Images/@item.images_size" height="150" width="150" />
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.brand.name_brand)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.category.name_category)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.warehouse.name_warehouse)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.id_products }) |
+            @Html.ActionLink("Details", "Details", new { id=item.id_products }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.id_products })
+        </td>
+    </tr>
 }
 
-@using (Html.BeginForm("Create", "products", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    <table class="table">
-        <tr>
-            <th style="width:200px;">
-                Tên Sản Phẩm
-            </th>
-            <th>
-                Giá
-            </th>
-            <th>
-                Giảm Giá
-            </th>
-            <th>
-                Hình Sản Phẩm
-            </th>
-            <th>
-                Hình Size
-            </th>
-            <th>
-                Hãng
-            </th>
-            <th>
-                Tên Loại
-            </th>
-            <th>
-                Mã Kho
-            </th>
-            <th>
-                Miêu Tả
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.price)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.discount)
-                </td>
-                <td>
-                    <img src="~/Content/Images/@item.images" height="150" width="150" />                    
-                </td>
-                <td>
-                    <img src="~/Content/Images-Title/@item.images_size" height="150" width="150" />                    
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.brand.name_brand)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.category.name_category)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.warehouse.id_warehouse)
-                </td>
-                <td>
-                    @Html.DisplayFor(modeItem => item.descibe)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.id_products }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.id_products }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.id_products })
-                </td>
-            </tr>
-        }
-    </table>
-}
+</table>
