--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<do_an_web.Models.product>
+﻿@using do_an_web.Models
+@model IEnumerable<product>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -11,13 +12,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="~/Content/Images-Title/discount_1.png" style="height:500px; width:700px;" alt="...">
+            <img src="~/Content/Images/discount_1.png" style="height:500px; width:700px;" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="~/Content/Images-Title/discount_2.png" style="height:500px; width:700px;" alt="...">
+            <img src="~/Content/Images/discount_2.png" style="height:500px; width:700px;" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="~/Content/Images-Title/discount_3.jpg" style="height:500px; width:700px;" alt="...">
+            <img src="~/Content/Images/discount_3.jpg" style="height:500px; width:700px;" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -38,9 +39,9 @@
             </li>
             <li class="list">
                 <p style="font-family: monospace; font-weight:700; font-size:25px;">Clothings</p>
-                <ul class="dropdown">
+                <div class="dropdown">
                     @Html.Action("takecategory", "Home")
-                </ul>
+                </div>
             </li>
             <li>
                 <a href="@Url.Action("Contact_View","Home")">Contact</a>
@@ -57,19 +58,17 @@
 <div class="row">
     @foreach (var clothes in Model)
     {
-
         <div class="card col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch book-section">
 
-            <a href="@Url.Action("Details", "product", new { id = clothes.id_products })">
+            <a href="@Url.Action("Details", "product", new { id_products = clothes.id_products })">
                 <img class="card-img-top book-picture h-100 w-50"
-                     src="~/Content/Images/@clothes.images" alt="Card image">
+                     src="~/Content/Images/@clothes.images" alt="Card image"/>
             </a>
             <div class="card-body">
                 <h4 class="card-title">@clothes.name</h4>
                 <p class="card-text">@clothes.price</p>
             </div>
         </div>
-
     }
 </div>
 
