--- a/Views/Home/takecategory.cshtml
+++ b/Views/Home/takecategory.cshtml
@@ -3,9 +3,11 @@
 <ul class="list-group">
     @foreach (var categories in Model)
     {
-        <a href="@Url.Action("prowithcate", "category", new { id=categories.id_category })"
-           class="list-group-item list-group-item-action">
-            @categories.name_category
-        </a>
+        <li>
+            <a href="@Url.Action("prowithcate", "category", new { id_products =categories.id_category })"
+               class="list-group-item list-group-item-action">
+                @categories.name_category
+            </a>
+        </li>
     }
 </ul>
