--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,11 +9,6 @@
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet" />
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
-@*    <script>
-        $(document).ready(function () {
-            $('#myTable').DataTable();
-        });
-    </script>*@
     <script src="~/Scripts/web_clothes.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -58,12 +53,12 @@
         </div>
         <ul class="nav-link">
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("DangNhap","NguoiDung")">Login</a>
+                <a href="@Url.Action("DangNhap","Users")">Login</a>
             </li>
-            <li>
-                <a href="@Url.Action("Register_View","Home")">Register</a>
+            <li class="nav-item">
+                <a href="@Url.Action("Register","Users")">Register</a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="@Url.Action("Contact_View", "Home")">Contact</a>
             </li>
         </ul>
@@ -88,11 +83,11 @@
             <div class="help">
                 <h2>Hướng Dẫn</h2>
                 <ul class="de-muc">
-                    <li><a href="@Url.Action("dieu_khoan_view","Home")">Điều Khoản</a></li>
-                    <li><a href="@Url.Action("huong_dan_mua_hang_view","Home")">Hướng Dẫn Mua Hàng</a></li>
-                    <li><a href="@Url.Action("chinh_sach_doi_tra_view","Home")">Chính Sách Đổi Trả</a></li>
-                    <li><a href="@Url.Action("chinh_sach_bao_mat_thong_tin_view","Home")">Bảo Mật Thông Tin Khách Hàng</a></li>
-                    <li><a href="@Url.Action("chinh_sach_thanh_toan_view","Home")">Chính Sách Thanh Toán</a></li>
+                    <li><a href="@Url.Action("dieu_khoan_view","privacy")">Điều Khoản</a></li>
+                    <li><a href="@Url.Action("huong_dan_mua_hang_view","privacy")">Hướng Dẫn Mua Hàng</a></li>
+                    <li><a href="@Url.Action("chinh_sach_doi_tra_view","privacy")">Chính Sách Đổi Trả</a></li>
+                    <li><a href="@Url.Action("chinh_sach_bao_mat_thong_tin_view","privacy")">Bảo Mật Thông Tin Khách Hàng</a></li>
+                    <li><a href="@Url.Action("chinh_sach_thanh_toan_view","privacy")">Chính Sách Thanh Toán</a></li>
                     <li class="reversed"><p>Co_Chay®</p></li>
                     <li class="reversed"><p>Copy By Needs Of Wisdom®</p></li>
                 </ul>
@@ -105,7 +100,8 @@
                     <li><a href="">CN 3 <span style="font-weight: bold;">48 Trần Quang Diệu, P.14, Q.3</span></a></li>
                     <li><a href="">CN 4 <span style="font-weight: bold;">463 Quang Trung, P.10, Q. Gò Vấp</span></a></li>
                     <li><a href="">Điện Thoại: <span style="font-weight: bold;">0946253769</span></a></li>
-                    <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a> <span style="color: white">|</span> <a href="">Email: <span style="font-weight: bold;">tranbaohoang2003@gmail.com</span></a></li>
+                    <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a> <span style="color: white">
+                        |</span> <a href="">Email: <span style="font-weight: bold;">tranbaohoang2003@gmail.com</span></a></li>
                 </ul>
             </div>
         </div>
