--- a/Views/cart/DatHang.cshtml
+++ b/Views/cart/DatHang.cshtml
@@ -24,8 +24,7 @@
             <tr>
                 <td>@clothes.id_product</td>
                 <td>@clothes.name</td>
-
-                <td><img src="~/Images/@clothes.images" style="width:100%" /></td>
+                <td><img src="~/Content/Images/@clothes.images" style="width:100%" /></td>
                 <td>@clothes.quantity</td>
                 <td>@String.Format("{0:0,0}", clothes.price)</td>
                 <td>@String.Format("{0:0,0}", clothes.total())</td>
