--- a/Views/cart/cartpartial.cshtml
+++ b/Views/cart/cartpartial.cshtml
@@ -1,12 +1,12 @@
-﻿@*@using do_an_web.Models
+﻿@using do_an_web.Models
 @{
     customer kh = (customer)Session["TaiKhoan"];
 }
-if (kh != null)
+@if (kh != null)
 {
 <span style="color: white; font-weight: bold">
     Username: @kh.name_customer
-</span>*@
+</span>
 }
 <a href="@Url.Action("showcart", "cart")" style="text-decoration: none; color:white; font-weight: bold">
     <img src="~/Content/Images/Giohang.gif" /> Giỏ hàng (@ViewBag.TongSL)
