--- a/Views/product/Details.cshtml
+++ b/Views/product/Details.cshtml
@@ -16,7 +16,7 @@
 <div class="row">
     <div class="offset-md-1 col-md-4">
         <img style="width:350px; height:350px;" src="~/Content/Images/@Model.images" alt="">
-        <img style="width:350px; height:350px;" src="~/Content/Images-Title/@Model.images_size" alt="" />  
+        <img style="width:350px; height:350px;" src="~/Content/Images/@Model.images" alt="" />  
     </div>
     <div class="col-md-6 details">
         <h3>Tên sách: @Model.name</h3><br />
