--- a/Views/product/Edit.cshtml
+++ b/Views/product/Edit.cshtml
@@ -82,10 +82,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.images_size, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.images, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.images_size, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.images_size, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
         </div>
     </div>
 
