--- a/Views/product/Index.cshtml
+++ b/Views/product/Index.cshtml
@@ -57,10 +57,12 @@
             @Html.Raw(item.descibe)
         </td>
         <td>
-            <img src="~/Content/Images/@item.images" width="100" height="100" />
+            @*<img src="~/Content/Images/@item.images" width="100" height="100" />*@
+            @Html.DisplayFor(modeItem => item.images)
         </td>
         <td>
-            <img src="~/Content/Images-Title/@item.images_size" width="100" height="100" />
+            @*<img src="~/Content/Images/@item.images" width="100" height="100" />*@
+            @Html.DisplayFor(modeItem => item.images)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.brand.name_brand)
