--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -5,23 +5,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    .row{
+        font-family:monospace;
+        font-size:20px;
+    }
+</style>
 <h2>THÔNG TIN CHI TIẾT SÁCH</h2>
 <br />
 <div class="row">
     <div class="offset-md-1 col-md-4">
-        <img style="width: 100%;" src="~/Images/@Model.images" alt="">
-    </div>
+        <img style="width:550px; height:550px;" src="~/Content/Images/@Model.images" alt="">
+        <img style="width:550px; height:550px;" src="~/Content/Images/@Model.images_size" alt="">
+    </div>    
+    
     <div class="col-md-6 details">
         <h3>Tên sách: @Model.name</h3>
-        <p style="text-align: justify">
+        <p style="text-align: center">
             <span style="font-weight: bold">Mô tả:</span> @Model.descibe
         </p>
         <p class="price">
-            Giá bán: <span style="color:red; font-size:32px;">
-                @String.Format("{0:0.00}", Model.price) VNĐ
-        </span>
-    </p>
-    <a class="btn btn-primary" href="@Url.Action("addtocart", "cart", new { id_products = Model.id_products })"> Đặt mua</a>
-</div>
+            Giá bán: <span style="color:red; font-size:32px;">@Model.price VNĐ</span>
+        </p>
+        <button class="btn btn-primary">
+            <a href="@Url.Action("addtocart","Cart", new { id_product = Model.id_products })" 
+               style="text-decoration:none; color:white;">ĐẶT MUA</a>
+        </button>
+    </div>
 </div>
 
