--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,8 +18,36 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 </head>
 <body>
-    @*    <div class="row justify-content-md-start">
-            <div class="col-md-4">
+        
+    <nav class="nav">
+        <div class="logo">
+            <a href="@Url.Action("Index","Home")"><img src="~/Content/Images/logo.jpg" /></a>
+        </div>
+        <div class="search-box">
+            <button type="button" class="btn btn-default">
+                <input class="glyphicon glyphicon-search" style="padding: 5px 4rem; border-radius:10px;" placeholder="Search" />
+            </button>
+
+            <button type="button" class="btn btn-info">
+                <p class="glyphicon glyphicon-search"><a style="text-decoration:none; color:white;">Search</a></p>
+            </button>
+        </div>
+        <ul class="nav-link">
+            <li class="nav-item">
+                <a href="@Url.Action("DangNhap","Users")">Login</a>
+            </li>
+            <li class="nav-item">
+                <a href="@Url.Action("Register","Users")">Register</a>
+            </li>
+            <li class="nav-item">
+                <a href="@Url.Action("Contact_View", "Home")">Contact</a>
+            </li>
+        </ul>
+        <div class="ml-auto">
+            @Html.Action("cartpartial", "cart")
+        </div>
+        <div class="row justify-content-md-start">
+            <div class="col-md-15">
                 <div class="card">
                     <div class="card-header">
                         Wellcome
@@ -35,35 +63,6 @@
                 </div>
 
             </div>
-        </div>*@
-    <nav class="nav">
-        <div class="logo">
-            <a href="@Url.Action("Index","Home")"><img src="~/Content/Images/logo.jpg" /></a>
-        </div>
-        <div class="search-box">
-            <button type="button" class="btn btn-default">
-                <input class="glyphicon glyphicon-search"
-                       style="padding: 5px 4rem; border-radius:10px;"
-                       placeholder="Search" />
-            </button>
-
-            <button type="button" class="btn btn-info">
-                <p class="glyphicon glyphicon-search"><a href="@Url.Action("Index","Home")">Search</a></p>
-            </button>
-        </div>
-        <ul class="nav-link">
-            <li class="nav-item">
-                <a href="@Url.Action("DangNhap","Users")">Login</a>
-            </li>
-            <li class="nav-item">
-                <a href="@Url.Action("Register","Users")">Register</a>
-            </li>
-            <li class="nav-item">
-                <a href="@Url.Action("Contact_View", "Home")">Contact</a>
-            </li>
-        </ul>
-        <div class="ml-auto">
-            @*@Html.Action("cartpartial", "cart")*@
         </div>
     </nav>
     <div>
@@ -76,8 +75,8 @@
                 <div class="icon">
                     <a href="https://www.facebook.com/hoangtran1609"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/lol_bruzzzz/"><i class="fa-brands fa-instagram"></i></a><br /><br />
-                    <a href=""><i class="fa-brands fa-telegram"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://t.me/hoangtran203"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="https://twitter.com/HOANGTRAN_203"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
             <div class="help">
@@ -95,13 +94,13 @@
             <div class="contact_us">
                 <h2>Địa Chỉ</h2>
                 <ul class="de-muc">
-                    <li><a href="">CN Chính: <span style="font-weight: bold;">123 Nguyễn Văn Linh, Quận 7, TP.HCM</span></a></li>
-                    <li><a href="">CN 2 <span style="font-weight: bold;">445 Sư Vạn Hạnh, P.12, Q.10</span></a></li>
-                    <li><a href="">CN 3 <span style="font-weight: bold;">48 Trần Quang Diệu, P.14, Q.3</span></a></li>
-                    <li><a href="">CN 4 <span style="font-weight: bold;">463 Quang Trung, P.10, Q. Gò Vấp</span></a></li>
-                    <li><a href="">Điện Thoại: <span style="font-weight: bold;">0946253769</span></a></li>
-                    <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a> <span style="color: white">
-                        |</span> <a href="">Email: <span style="font-weight: bold;">tranbaohoang2003@gmail.com</span></a></li>
+                    <li><a href="https://goo.gl/maps/QGLQ5hjP9r7WwYA18">CN Chính: <span style="font-weight: bold;">176 Đường Số 2,phường 13, quận 6</span></a></li>
+                    <li><a href="https://goo.gl/maps/hLsM1CTMYTTRULUy9">CN 2 <span style="font-weight: bold;">445 Sư Vạn Hạnh, P.12, Q.10</span></a></li>
+                    <li><a href="https://goo.gl/maps/s86qZcmxQzWW3Kdn8">CN 3 <span style="font-weight: bold;">48 Trần Quang Diệu, P.14, Q.3</span></a></li>
+                    <li><a href="https://goo.gl/maps/nYsG4nMUZvYAEgT57">CN 4 <span style="font-weight: bold;">463 Quang Trung, P.10, Q. Gò Vấp</span></a></li>
+                    <li><p>Điện Thoại: <span style="font-weight: bold;">0946253769</span></p></li>
+                    <li><p>Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></p> <span style="color: white">
+                        |</span> <p>Email: <span style="font-weight: bold;">tranbaohoang2003@gmail.com</span></p></li>
                 </ul>
             </div>
         </div>
