--- a/Views/Users/Register.cshtml
+++ b/Views/Users/Register.cshtml
@@ -16,8 +16,7 @@
                 @Html.TextBox("HoTenKH", null, new
                 {
                     @class = "form-control",
-                    @id =
-                "name",
+                    @id = "name",
                     required = "required"
                 })
             </div>
@@ -26,8 +25,7 @@
                 @Html.TextBox("TenDN", null, new
                 {
                     @class = "form-control",
-                    @id =
-                "dangnhap",
+                    @id = "dangnhap",
                     required = "required"
                 })
             </div>
@@ -36,8 +34,7 @@
                 @Html.Password("Matkhau", null, new
                 {
                     @class = "form-control",
-                    @id =
-                "matkhau",
+                    @id = "matkhau",
                     required = "required"
                 })
             </div>
@@ -46,8 +43,7 @@
                 @Html.TextBox("Email", null, new
                 {
                     @class = "form-control",
-                    @id =
-                "email",
+                    @id = "email",
                     type = "email",
                     required = "required"
                 })
@@ -57,8 +53,7 @@
                 @Html.TextBox("DiachiKH", null, new
                 {
                     @class = "form-control",
-                    @id =
-                "diachi"
+                    @id = "diachi"
                 })
             </div>
             <div class="form-group">
@@ -66,8 +61,7 @@
                 @Html.TextBox("DienthoaiKH", null, new
                 {
                     @class = "form-control",
-                    @id =
-                "dienthoai",
+                    @id = "dienthoai",
                     required = "required"
                 })
             </div>
@@ -76,8 +70,7 @@
                 @Html.TextBox("Ngaysinh", null, new
                 {
                     @class = "form-control",
-                    @id =
-                "ngaysinh",
+                    @id = "ngaysinh",
                     type = "date",
                     placeholder = "mm/dd/yyyy"
                 })
