--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -14,8 +14,10 @@
 <h2>THÔNG TIN CHI TIẾT SÁCH</h2>
 <br />
 <div class="row">
-    <div class="offset-md-1 col-md-4">
+    <div class="offset-md-2 col-md-4">
+        <label>Hình Sản Phẩm</label>
         <img style="width:550px; height:550px;" src="~/Content/Images/@Model.images" alt="">
+        <label>Bảng Size</label>
         <img style="width:550px; height:550px;" src="~/Content/Images/@Model.images_size" alt="">
     </div>    
     
