--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="background-color:gray; border-radius:20px;">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -11,22 +11,22 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="~/Content/Images/discount_1.png" style="height:500px; width:700px;" alt="...">
+            <img src="~/Content/Images/discount_1.png" style="height:500px; width:900px; border-radius:20px;" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="~/Content/Images/discount_2.png" style="height:500px; width:700px;" alt="...">
+            <img src="~/Content/Images/discount_2.png" style="height: 500px; width: 900px; border-radius: 20px;" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="~/Content/Images/discount_3.jpg" style="height:500px; width:700px;" alt="...">
+            <img src="~/Content/Images/discount_3.jpg" style="height:500px; width:900px;border-radius:20px;" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+        <span class="visually-hidden-focusable">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+        <span class="visually-hidden-focusable">Next</span>
     </button>
 </div>
 <nav class="tab2">
@@ -59,7 +59,7 @@
     {
         if (clothes.id_category == 1)
         {
-            <div class="card col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch cart-section">
+            <div class="card col-sm-3 col-md-3 col-lg-3 d-flex align-items-stretch cart-section">
 
                 <a href="@Url.Action("Details", "Home", new { id = clothes.id_products })">
                     <img class="card-img-top book-picture h-100 w-50"
